- BACKWARDS COMPAT WARNING: updated &indexOf and &lindexOf to
  return $null when no match is found.  This is a change from
  their original return value of -1.  $null is == to 0.  However
  this does enable a cleaner means for iterating with indexOf.

  $index = -1;
  while $index (indexOf($string, "token", $index + 1))
  {
     # ...
  }
  # do something with substr($string, $start + 1) 

2.1-beta 25  (8 May 08) [will this beta process ever end?]
===========
- added &chdir() to change the current working directory of the
  active script instance.  This value is inherited by fork().  
  All I/O and File System bridge functions that manipulate files 
  (including exec) utilize the current working directory.  Use 
  &cwd() to obtain the current working directory value.
- &readb($handle, -1) will attempt to read all bytes from the 
  specified handle.  
- I/O functions are now smarter about checking their arguments.
- replaced test.pl regression tester with a Sleep version.
  The Sleep version is much faster and it is forgiving of 
  address and installation path differences.  
- implemented taint wrappers for the Map->Hash and Collection to
  Array wrappers obtain with SleepUtils.  The TaintUtils.taintAll
  method is intelligent enough to employ these against wrapped
  data structures when necessary.
- changed implementation of foreach to more efficiently iterate
  over hashes.  remove() w/i a foreach loop now works with hashes.
- removed sleeplang.html from the repository and added a .url
  file pointing to the Sleep Manual.  When the manual is complete
  I will create a .pdf and distribute it with the Sleep source.
- &warn no longer shows as a function call in debug traces
- fixed line number skew with the else if and else blocks of 
  if statements.

2.1-beta 24  (30 Apr 08)
===========
- refactored Parser/CodeGenerator to use a factory pattern for
  generating atomic steps. 
- changed implementation of PLiteral to precalculate all values